--- a/web-portal/public/index.html
+++ b/web-portal/public/index.html
@@ -1,34 +1,76 @@
 <!doctype html>
 <html>
+
 <head>
-<title>OAuth Demo with bootstrap</title>
-<link href="css/bootstrap.min.css" rel="stylesheet" />
-<style type="text/css">
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak,
-	.x-ng-cloak {
-	display: none !important;
-}
-</style>
+    <title>OAuth Demo with bootstrap</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <style type="text/css">
+        [ng\:cloak],
+        [ng-cloak],
+        [data-ng-cloak],
+        [x-ng-cloak],
+        .ng-cloak,
+        .x-ng-cloak {
+            display: none !important;
+        }
+
+    </style>
 </head>
-<body data-ng-app="oauthApp" data-ng-cloak>
-	<div data-ng-controller="navigationCtrl" class="container">
-		<ul class="nav nav-pills" role="tablist">
-			<li class="{active:tab('home')}"><a href="#/">home</a></li>
-			<li><a href="login">login</a></li>
-			<li><a href="#/user">user</a></li>
-			<li><a href="#/task">task</a></li>
-			<li data-ng-show="userAuthenticated"><a href="" data-ng-click="logout()">logout</a></li>
-		</ul>
-	</div>
-	
-	<div data-ng-view class="container"></div>
-	
-	<script type="text/javascript" src="js/libs/angular.min.js"></script>
-	<script type="text/javascript" src="js/libs/angular-route.min.js"></script>
-	<script type="text/javascript" src="js/app/oauthapp.js"></script>
-	<script type="text/javascript" src="js/app/controller/userController.js"></script>
-	<script type="text/javascript" src="js/app/controller/navController.js"></script>
+
+<body data-ng-app="oauthApp">
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <div data-ng-controller="navigationCtrl" class="container-fluid" data-ng-cloak>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Micro-services using Spring Cloud</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#/">Home</a></li>
+                    <li>
+                        <a href="login">
+                            <span data-ng-switch on="userAuthenticated">
+                    <span data-ng-switch-when="true">
+                        Refresh Token
+                    </span>
+                            <span data-ng-switch-when="false">
+                        login
+                    </span>
+                            <span data-ng-switch-default>
+                        Default login
+                    </span>
+                            </span>
+                        </a>
+                    </li>
+                    <li><a href="#/user">User</a></li>
+                    <li><a href="#/task">Task</a></li>
+                    <li data-ng-show="userAuthenticated"><a href="" data-ng-click="logout()">Logout</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+    </nav>
+
+    <div class="container">
+        <div data-ng-view></div>
+    </div>
+
+    <script type="text/javascript" src="js/libs/angular.min.js"></script>
+    <script type="text/javascript" src="js/libs/angular-route.min.js"></script>
+    <!-- note jquery tag has to go before boostrap -->
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/app/oauthapp.js"></script>
+    <script type="text/javascript" src="js/app/controller/userController.js"></script>
+    <script type="text/javascript" src="js/app/controller/navController.js"></script>
     <script type="text/javascript" src="js/app/controller/homeController.js"></script>
-	<script type="text/javascript" src="js/app/services/dataservice.js"></script>
+    <script type="text/javascript" src="js/app/controller/taskController.js"></script>
+    <script type="text/javascript" src="js/app/services/dataservice.js"></script>
 </body>
+
 </html>
