--- a/web-portal/public/index.html
+++ b/web-portal/public/index.html
@@ -13,7 +13,6 @@
         .x-ng-cloak {
             display: none !important;
         }
-
     </style>
 </head>
 
@@ -32,23 +31,32 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="#/">Home</a></li>
+                    <!-- The "/login" endpoint that this goes to is handled by Spring Security and if the user 
+                        is not authenticated it will result in a redirect to the authorization server. 
+                        Note that it is not an Angular # route.
+                    -->
                     <li>
                         <a href="login">
                             <span data-ng-switch on="userAuthenticated">
-                    <span data-ng-switch-when="true">
-                        Refresh Token
-                    </span>
-                            <span data-ng-switch-when="false">
-                        login
-                    </span>
-                            <span data-ng-switch-default>
-                        Default login
-                    </span>
+                                <span data-ng-switch-when="true">
+                                    Refresh Token
+                                </span>
+                                        <span data-ng-switch-when="false">
+                                    login
+                                </span>
+                                        <span data-ng-switch-default>
+                                    Default login
+                                </span>
                             </span>
                         </a>
                     </li>
                     <li><a href="#/user">User</a></li>
                     <li><a href="#/task">Task</a></li>
+                    <!-- The "/logout" endpoint is used for Spring security to logout the current user after a 
+                    POST request. However when you click on the "login" link again, you don't need to go through
+                    the authentication and approval flow; this is because we have only logged out from the "api-gateway" 
+                    but not from the authorization server.
+                    -->
                     <li data-ng-show="userAuthenticated"><a href="" data-ng-click="logout()">Logout</a></li>
                 </ul>
             </div>
